test/integration/good/function-signatures/distributions/univariate/discrete/discrete_range/pretty.expected
  $ ../../../../../../../../../install/default/bin/stanc --auto-format discrete_range_cdf.stan
data {
  int d_int;
  array[d_int] int d_int_array;
}
transformed data {
  real transformed_data_real;
  transformed_data_real = discrete_range_cdf(d_int, d_int, d_int);
  transformed_data_real = discrete_range_cdf(d_int, d_int, d_int_array);
  transformed_data_real = discrete_range_cdf(d_int, d_int_array, d_int);
  transformed_data_real = discrete_range_cdf(d_int, d_int_array, d_int_array);
  transformed_data_real = discrete_range_cdf(d_int_array, d_int, d_int);
  transformed_data_real = discrete_range_cdf(d_int_array, d_int, d_int_array);
  transformed_data_real = discrete_range_cdf(d_int_array, d_int_array, d_int);
  transformed_data_real = discrete_range_cdf(d_int_array, d_int_array,
                                             d_int_array);
}
parameters {
  real y_p;
}
transformed parameters {
  real transformed_param_real;
  transformed_param_real = discrete_range_cdf(d_int, d_int, d_int);
  transformed_param_real = discrete_range_cdf(d_int, d_int, d_int_array);
  transformed_param_real = discrete_range_cdf(d_int, d_int_array, d_int);
  transformed_param_real = discrete_range_cdf(d_int, d_int_array,
                                              d_int_array);
  transformed_param_real = discrete_range_cdf(d_int_array, d_int, d_int);
  transformed_param_real = discrete_range_cdf(d_int_array, d_int,
                                              d_int_array);
  transformed_param_real = discrete_range_cdf(d_int_array, d_int_array,
                                              d_int);
  transformed_param_real = discrete_range_cdf(d_int_array, d_int_array,
                                              d_int_array);
}
model {
  y_p ~ normal(0, 1);
}

  $ ../../../../../../../../../install/default/bin/stanc --auto-format discrete_range_lccdf.stan
data {
  int d_int;
  array[d_int] int d_int_array;
}
transformed data {
  real transformed_data_real;
  transformed_data_real = discrete_range_lccdf(d_int, d_int, d_int);
  transformed_data_real = discrete_range_lccdf(d_int, d_int, d_int_array);
  transformed_data_real = discrete_range_lccdf(d_int, d_int_array, d_int);
  transformed_data_real = discrete_range_lccdf(d_int, d_int_array,
                                               d_int_array);
  transformed_data_real = discrete_range_lccdf(d_int_array, d_int, d_int);
  transformed_data_real = discrete_range_lccdf(d_int_array, d_int,
                                               d_int_array);
  transformed_data_real = discrete_range_lccdf(d_int_array, d_int_array,
                                               d_int);
  transformed_data_real = discrete_range_lccdf(d_int_array, d_int_array,
                                               d_int_array);
}
parameters {
  real y_p;
}
transformed parameters {
  real transformed_param_real;
  transformed_param_real = discrete_range_lccdf(d_int, d_int, d_int);
  transformed_param_real = discrete_range_lccdf(d_int, d_int, d_int_array);
  transformed_param_real = discrete_range_lccdf(d_int, d_int_array, d_int);
  transformed_param_real = discrete_range_lccdf(d_int, d_int_array,
                                                d_int_array);
  transformed_param_real = discrete_range_lccdf(d_int_array, d_int, d_int);
  transformed_param_real = discrete_range_lccdf(d_int_array, d_int,
                                                d_int_array);
  transformed_param_real = discrete_range_lccdf(d_int_array, d_int_array,
                                                d_int);
  transformed_param_real = discrete_range_lccdf(d_int_array, d_int_array,
                                                d_int_array);
}
model {
  y_p ~ normal(0, 1);
}


Semantic error in 'discrete_range_lccdf.stan', line 7, column 26 to column 67:
   -------------------------------------------------
     5:  transformed data {
     6:    real transformed_data_real;
     7:    transformed_data_real = discrete_range_lccdf(d_int, d_int, d_int);
                                   ^
     8:    transformed_data_real = discrete_range_lccdf(d_int, d_int, d_int_array);
     9:    transformed_data_real = discrete_range_lccdf(d_int, d_int_array, d_int);
   -------------------------------------------------

Probability functions with suffixes _lpdf, _lupdf, _lpmf, _lupmf, _lcdf and _lccdf, require a vertical bar (|) between the first two arguments.

  $ ../../../../../../../../../install/default/bin/stanc --auto-format discrete_range_lcdf.stan
data {
  int d_int;
  array[d_int] int d_int_array;
}
transformed data {
  real transformed_data_real;
  transformed_data_real = discrete_range_lcdf(d_int, d_int, d_int);
  transformed_data_real = discrete_range_lcdf(d_int, d_int, d_int_array);
  transformed_data_real = discrete_range_lcdf(d_int, d_int_array, d_int);
  transformed_data_real = discrete_range_lcdf(d_int, d_int_array,
                                              d_int_array);
  transformed_data_real = discrete_range_lcdf(d_int_array, d_int, d_int);
  transformed_data_real = discrete_range_lcdf(d_int_array, d_int,
                                              d_int_array);
  transformed_data_real = discrete_range_lcdf(d_int_array, d_int_array,
                                              d_int);
  transformed_data_real = discrete_range_lcdf(d_int_array, d_int_array,
                                              d_int_array);
}
parameters {
  real y_p;
}
transformed parameters {
  real transformed_param_real;
  transformed_param_real = discrete_range_lcdf(d_int, d_int, d_int);
  transformed_param_real = discrete_range_lcdf(d_int, d_int, d_int_array);
  transformed_param_real = discrete_range_lcdf(d_int, d_int_array, d_int);
  transformed_param_real = discrete_range_lcdf(d_int, d_int_array,
                                               d_int_array);
  transformed_param_real = discrete_range_lcdf(d_int_array, d_int, d_int);
  transformed_param_real = discrete_range_lcdf(d_int_array, d_int,
                                               d_int_array);
  transformed_param_real = discrete_range_lcdf(d_int_array, d_int_array,
                                               d_int);
  transformed_param_real = discrete_range_lcdf(d_int_array, d_int_array,
                                               d_int_array);
}
model {
  y_p ~ normal(0, 1);
}


Semantic error in 'discrete_range_lcdf.stan', line 7, column 26 to column 66:
   -------------------------------------------------
     5:  transformed data {
     6:    real transformed_data_real;
     7:    transformed_data_real = discrete_range_lcdf(d_int, d_int, d_int);
                                   ^
     8:    transformed_data_real = discrete_range_lcdf(d_int, d_int, d_int_array);
     9:    transformed_data_real = discrete_range_lcdf(d_int, d_int_array, d_int);
   -------------------------------------------------

Probability functions with suffixes _lpdf, _lupdf, _lpmf, _lupmf, _lcdf and _lccdf, require a vertical bar (|) between the first two arguments.

  $ ../../../../../../../../../install/default/bin/stanc --auto-format discrete_range_lpmf.stan
data {
  int d_int;
  array[d_int] int d_int_array;
}
transformed data {
  real transformed_data_real;
  transformed_data_real = discrete_range_lpmf(d_int| d_int, d_int);
  transformed_data_real = discrete_range_lpmf(d_int| d_int, d_int_array);
  transformed_data_real = discrete_range_lpmf(d_int| d_int_array, d_int);
  transformed_data_real = discrete_range_lpmf(d_int| d_int_array, d_int_array);
  transformed_data_real = discrete_range_lpmf(d_int_array| d_int, d_int);
  transformed_data_real = discrete_range_lpmf(d_int_array| d_int, d_int_array);
  transformed_data_real = discrete_range_lpmf(d_int_array| d_int_array, d_int);
  transformed_data_real = discrete_range_lpmf(d_int_array| d_int_array, d_int_array);
}
parameters {
  real y_p;
}
transformed parameters {
  real transformed_param_real;
  transformed_param_real = discrete_range_lpmf(d_int| d_int, d_int);
  transformed_param_real = discrete_range_lpmf(d_int| d_int, d_int_array);
  transformed_param_real = discrete_range_lpmf(d_int| d_int_array, d_int);
  transformed_param_real = discrete_range_lpmf(d_int| d_int_array, d_int_array);
  transformed_param_real = discrete_range_lpmf(d_int_array| d_int, d_int);
  transformed_param_real = discrete_range_lpmf(d_int_array| d_int, d_int_array);
  transformed_param_real = discrete_range_lpmf(d_int_array| d_int_array, d_int);
  transformed_param_real = discrete_range_lpmf(d_int_array| d_int_array, d_int_array);
}
model {
  y_p ~ normal(0, 1);
}

